<!--
  ~ Copyright (c) 2016 Iarratais Development
  ~
  ~ karl.development@gmail.com
  -->

<resources>
    <!-- App Info -->
    <string name="app_name">My Device Information</string>

    <!-- Google Play Information -->
    <string name="google_play_services_tab_title">Play services</string>
    <string name="google_play_services_title">Google Play Services</string>
    <string name="google_play_services_installed">Google Play services are installed</string>
    <string name="google_play_services_not_installed">Google Play services are not
        installed</string>
    <string name="google_play_services_version_code">Version code: %1$s</string>
    <string name="google_play_services_version_name">Version name: %1$s</string>
    <string name="google_play_services_get_from_play_store">Get on the Play Store</string>
    <string name="google_play_services_get_from_apk_mirror">Get on APK Mirror</string>

    <!-- Device Information -->
    <string name="device_information_tab_title">Device</string>
    <string name="device_information_title">Device Information</string>
    <string name="device_information_manufacturer">Manufacturer: %1$s</string>
    <string name="device_information_device_model">Device model: %1$s</string>
    <string name="device_information_android_version">Android version: %1$s, %2$s</string>
    <string name="device_information_is_rooted">Device rooted: %1$s</string>
    <string name="device_information_imei">IMEI: %1$s</string>

    <!-- Network Information -->
    <string name="network_information_tab_title">Network</string>
    <string name="network_information_title">Network Information</string>
    <string name="network_information_wifi_status">WiFi: %1$s</string>
    <string name="network_information_wifi_SSID">Connected to %1$s</string>
    <string name="network_information_ip_address">IP address: %1$s</string>
    <string name="network_information_mac_address">MAC address: %1$s</string>
    <string name="network_information_mobile_data_status">Mobile data: %1$s</string>
    <string name="network_information_bluetooth_status">Bluetooth: %1$s</string>

    <!-- Battery Information -->
    <string name="battery_information_tab_title">Battery</string>
    <string name="battery_information_title">Battery Information</string>
    <string name="battery_information_charging_status">Charging status: %1$s</string>
    <string name="battery_information_charging">charging</string>
    <string name="battery_information_not_charging">not charging</string>
    <string name="battery_information_charging_method">Charging via %1$s</string>
    <string name="battery_information_charging_via_usb">USB</string>
    <string name="battery_information_charging_via_ac">AC</string>
    <string name="battery_information_charging_via_wireless">wireless charger</string>
    <string name="battery_information_charge_level">Charge level: %1$s</string>

    <!-- Display Information -->
    <string name="display_information_tab_title">Display</string>
    <string name="display_information_title">Display Information</string>
    <string name="display_information_dpi">Screen density: %1$s</string>
    <string name="display_information_orientation">Orientation: %1$s</string>
    <string name="display_information_orientation_portrait">portrait</string>
    <string name="display_information_orientation_landscape">landscape</string>
    <string name="display_information_width">Width: %1$s px</string>
    <string name="display_information_height">Height: %1$s px</string>

    <!-- SIM Information -->
    <string name="sim_information_tab_title">SIM</string>
    <string name="sim_information_title">SIM Information</string>
    <string name="sim_information_phone_number">Phone Number: %1$s</string>
    <string name="sim_information_network">Network: %1$s</string>
    <string name="sim_information_network_country">Network Country: %1$s</string>

    <!-- Errors -->
    <string name="error_check_your_network_settings">Please check your network settings</string>
    <string name="error_permission_not_granted">Access denied</string>

    <!-- Common Strings -->
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="not_supported">not supported</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Android Versions -->
    <string name="android_version_cupcake">Cupcake</string>
    <string name="android_version_donut">Donut</string>
    <string name="android_version_eclair">Eclair</string>
    <string name="android_version_froyo">Froyo</string>
    <string name="android_version_gingerbread">Gingerbread</string>
    <string name="android_version_honeycomb">Honeycomb</string>
    <string name="android_version_ice_cream_sandwich">Ice Cream Sandwich</string>
    <string name="android_version_jelly_bean">Jelly Bean</string>
    <string name="android_version_kitkat">Kitkat</string>
    <string name="android_version_lollipop">Lollipop</string>
    <string name="android_version_marshmallow">Marshmallow</string>
    <string name="android_version_nougat">Nougat</string>
</resources>
